@@ -1,3 +1,6 @@
+2006-10-20  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/taper.c (free_split_buffer): Correct free.
+
 2006-10-19  Jean-Louis Martineau <martineau@zmanda.com>
 	* man/xml-source/amanda.conf.5.xml: Fix formating.
 
